[package]
name = "water-tomorrow-esp32"
version = "0.1.0"
authors = ["Denis <denisjullien@neocean.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal   = { version = "0.16.0", features = ["xtal-40mhz", "embassy", "embassy-time-timg0", "async", "embassy-executor-thread"] }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
esp-wifi = {version = "0.1", features = ["esp32", "wifi", "async", "embassy-net"]}
esp-wifi-sys = { version = "0.1.0" }

embedded-svc = { version = "0.26.1", default-features = false, features = [] }
static_cell = { version = "=1.2", features = ["nightly"] }

embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.2.1", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.1.5", features = ["nightly"] }
embassy-executor = { version = "=0.3.2", features = ["nightly", "executor-thread", "integrated-timers"] } # temporarily pin because we aren't ready for portable-atomic yet

embedded-hal-async = { version = "1.0.0-rc.1" }
embedded-io-async = { version = "0.6.0" }

[profile.dev.package.esp-wifi]
opt-level = 3